bktid: fix border-radius on mobile

--- a/css/stanisa.css
+++ b/css/stanisa.css
@@ -45,6 +45,6 @@ body {
 }
 
 .stanisa_golden_block_picture_container img {
-    border-radius: 2em 2em 2em 0;
+    border-radius: 15% 15% 15% 0 / 18%; /* use this when you combine high values with rectangles that are pinched on small screens */
     width: 100%; /* picture has to fill it's container */
 }
